# watchy

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  config-example.yml
include/: WatchedItem.h  Watcher.h  WatcherEntry.h  WatcherItem.h  WatcherRegistry.h  WatcherRegistryBuilder.h
src/: Watcher.cpp  WatcherRegistry.cpp  WatcherRegistryBuilder.cpp  main.cpp
